# signed-distance-field-rs

./: .gitignore  Cargo.toml  README.md
benches/: buffered.rs
examples/: convert_sketch.rs  examples.rs  write_png.rs
src/: binary_image.rs  distance_field.rs  lib.rs
