[package]
name = "signed-distance-field"
version = "0.6.0"
authors = ["johannesvollmer"]
edition = "2018"
description = "Fast signed distance fields algorithm using `dead reckoning`"
# TODO documentation = "..."
readme = "README.md"
repository = "https://github.com/johannesvollmer/sdf-dead-reckoning"
keywords = ["distance field", "signed distance field", "dead reckoning", "vector field", "SDF"]
categories = ["algorithms", "graphics", "gui", "multimedia::images", "encoding"]
license = "MIT"

exclude = [
    "images",
    "images/*",
]

[features]
piston_image = [ "image" ]

[dependencies]
image = { version = "0.21.0", optional = true }

# TODO let users of this library specify if they want to use intrinsics?
half = "1.3.0" # { version = "1.3.0", features = [ "use-intrinsics" ] }


[[example]]
name = "convert_sketch"
required-features = ["piston_image" ]
