[package]
name = "signed-distance-field"
version = "0.6.3"
edition = "2018"

description = "Fast signed distance fields from binary images using `dead reckoning`"
categories = ["algorithms", "graphics", "gui", "multimedia::images", "encoding"]
keywords = ["signed", "distance", "vector", "field", "sdf"]
authors = ["johannesvollmer"]

documentation = "https://docs.rs/crate/signed-distance-field/"
repository = "https://github.com/johannesvollmer/sdf-dead-reckoning"
readme = "README.md"
license = "MIT"
exclude = [
    "images",
    "images/*",
]


[badges]
maintenance = { status = "passively-maintained" }

[features]
piston_image = [ "image" ]


[dependencies]
image = { version = "0.21.0", optional = true }
# TODO let users of this library specify if they want to use intrinsics?
half = "1.3.0" # { version = "1.3.0", features = [ "use-intrinsics" ] }


[[example]]
name = "convert_sketch"
required-features = ["piston_image" ]
